2002-01-27  David N. Welton  <davidw@dedasys.com>

	* tests/parse.test: Added test for 'parse' command.

	* src/mod_rivet.c (Rivet_ParseExecFile): Moved the addition of
	before and after scripts to this file, so that GetRivetFile is
	independant of any Apache specific code.

	* src/rivetParser.c, src/rivetParser.h: New files, which replace
	parser.c and parser.h.
	(Rivet_GetRivetFile): Moved from mod_rivet.c.  Now capable of
	operating independantly of mod_rivet.  Use Tcl file functions
	instead of Apache functions.
	(Rivet_Parser): Parser now operates on a Tcl_Obj input buffer.

	* src/mod_rivet.h: Moved content_sent to TclWebRequest in TclWeb.h

2002-01-26  David N. Welton  <davidw@dedasys.com>

	* tests/binary.test: Added test file for binary file handling.

	* src/mod_rivet.c (Rivet_SendContent): Moved 'header_only' option
	so that the request is set up and we don't segfault.
	(Rivet_GetRivetFile): changed puts to puts -nonewline, so as to
	not add spurious newlines.

	* src/rivetCore.c (Rivet_Include): Simplified code some, with '-1'
	argument to Tcl_ReadChars.  Eliminated "lf" -translation option.

2002-01-24  David N. Welton  <davidw@dedasys.com>

	* tests/include.test: Added test for 'include' command.

2002-01-22  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c, src/channel.c, src/rivetCore.c: Switched to
	TclWeb functions for error, headers.

	* src/mod_rivet.h: Moved headers_set and headers_printed out of
	the rivet_server_conf struct and into the TclWebRequest struct.

	* src/TclWebapache.c: Moved PrintHeaders, PrintError and
	SetHeaderType from mod_rivet.c.

	* src/TclWeb.h: Added ER1, ER2 and DEFAULT_HEADER_TYPE here.

	* tests/get.test: Added some tests related to [var *].

	* tests/post.test: Added some tests related to [var *].

	* src/rivetList.c (Rivet_LassignArrayObjCmd): Use -1 instead of
	NULL when doing NewStringObj.

	* src/rivetCrypt.c: Added header file.

	* src/make.tcl: Added slightly nicer apxs handling.
